--- a/code/notebooks/chroma.ipynb
+++ b/code/notebooks/chroma.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "collection = chroma_client.create_collection(\n",
     "    name=\"test_collection\",\n",
-    "    metadata={\"hnsw:space\": \"cosine\"},\n",
+    "    metadata={\"hnsw:space\": \"cosine\"}\n",
     ")"
    ]
   },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "68620302",
    "metadata": {},
    "outputs": [
